# llm-book

./: .env  .gitignore  README.md  Requirements.txt  Sentiment_Analysis.ipynb  classifcation.ipynb  data-exploration.ipynb  extract_versions.py  gradio-dashboard.ipynb  main.ipynb  pyproject.toml  requirements.txt  requirements_from_notebooks.txt  sentiment-analysis.ipynb  text-classification.ipynb  vector-search.ipynb
